# origami

./: .gitignore  Cargo.toml  Makefile  README.md
java-compilers/common-args/: Cargo.toml
java-compilers/common-args/src/: lib.rs
java-compilers/oecj/: Cargo.toml
java-compilers/oecj/java/: build.gradle  settings.gradle
java-compilers/oecj/java/src/main/java/net/dblsaiko/origami/oecj/: Main.java
java-compilers/oecj/src/: main.rs
java-compilers/ojavac/: Cargo.toml  README.md
java-compilers/ojavac/java/: .gitignore  Makefile  build.gradle  settings.gradle
java-compilers/ojavac/java/src/main/java/net/dblsaiko/origami/ojavac/: JavaFileObjectDelegate.java  JavaFileObjectImpl.java  Main.java  SliceIter.java  StandardJavaFileManagerDelegate.java  TrackingJavaFileManager.java  TrackingJavaFileObject.java
java-compilers/ojavac/java/src/net/dblsaiko/origami/ojavac/: Main.java  TrackingJavaFileManager.java
java-compilers/ojavac/src/: main.rs
jvmapi/: Cargo.toml
jvmapi-proto/: Cargo.toml
jvmapi-proto/src/: structs.rs
jvmapi/src/: framed.rs  javacli.rs  lib.rs  main.rs
jvmapi/src/jvm/: async_command.rs  command.rs  mod.rs  process.rs
jvmapi/src/jvm/direct/: async_task.rs  mod.rs  sync_task.rs
jvmapi/src/protocol/: fncall.rs  mod.rs  streams.rs  structs.rs
ojvm-launch/: Cargo.toml
ojvm-launch/src/: main.rs
ojvmd/: Cargo.toml
ojvmd/src/: main.rs
omake/: Cargo.toml
omake/src/: main.rs  project.rs  task.rs
omake/src/java/: mod.rs  plugin.rs
omake/src/plugin/: mod.rs
omake/src/task/: pathdep.rs
oresolve/: Cargo.toml
oresolve/src/: cache.rs  config.rs  indexer.rs  main.rs  vercmp.rs
oresolve/src/maven/: gen.rs  mod.rs  specifier.rs
origami-common/: Cargo.toml
origami-common/src/: lib.rs  lockfile.rs
task-dispatcher/: Makefile  build.gradle  settings.gradle
task-dispatcher/src/main/java/net/dblsaiko/origami/taskdispatcher/: Dispatcher.java  IncomingHandler.java  ProtocolReader.java  ProtocolWriter.java  Sink.java  Stream.java
task-dispatcher/src/main/java/net/dblsaiko/origami/taskdispatcher/protocol/: BinDeserializeFor.java  BinSerializer.java  CloseResult.java  FromJvm.java  Read.java  ReadResult.java  Result.java  Stdio.java  ToJvm.java  Unit.java  WaitResult.java  Write.java
task-dispatcher/src/net/dblsaiko/origami/: TestService.java
task-dispatcher/src/net/dblsaiko/origami/taskdispatcher/: AsyncQueue.java  CommController.java  Main.java  MuxInputStream.java  MuxOutputStream.java  ProtocolWriter.java  Util.java  WrappedInputStream.java  WrappedOutputStream.java
task-dispatcher/src/net/dblsaiko/origami/taskdispatcher/protocol/: BinDeserializer.java  BinSerialize.java  BinSerializeFor.java  Close.java  Exec.java  ExecError.java  ExecResult.java  IoError.java  TaskInfo.java  Wait.java  WriteResult.java
test/: .gitignore  origami.toml
test/src/: Main.java  abcd.java
