[package]
name = "jvmapi-proto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#binserde = "0.1.6"
binserde = { git = "https://github.com/2xsaiko/binserde.git", rev = "8722a920f5e54f618092b51b7ca4488d1a54f2a1" }