[package]
name = "jvmapi"
version = "0.1.0"
authors = ["2xsaiko <me@dblsaiko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jvmapi-proto = { path = "../jvmapi-proto" }
serde = "1.0.125"
serde_json = "1.0.64"
bytes = "1.0.1"
async-std = "1.9.0"
async-process = "1.1.0"
async-codec = "0.4.0"
futures = { version = "0.3.15", features = ["async-await"] }
log = "0.4.14"
pin-project-lite = "0.2.6"
thiserror = "1.0.25"
binserde = "0.1.7"
simplelog = "0.10.0"
lazy_static = "1.4.0"
tempfile = "3.2.0"