[package]
name = "omake"
version = "0.1.0"
authors = ["2xsaiko <me@dblsaiko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0.23"
serde = { version = "1.0.118", features = ["derive"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
type-map = "0.4.0"