[package]
name = "ojavac"
description = "Origami javac wrapper"
version = "0.1.0"
authors = ["2xsaiko <me@dblsaiko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
origami-common = { path = "../../origami-common" }
common-args = { path = "../common-args" }
jvmapi = { path = "../../jvmapi" }
clap = { version = "3.0.13", features = ["cargo"] }
tempfile = "3.2.0"
proc-exit = "1.0.3"